--- a/package.json
+++ b/package.json
@@ -2,31 +2,25 @@
   "name": "tarripoha-frontend",
   "version": "0.1.0",
   "private": true,
-
-  
   "dependencies": {
-    "react": "^19",
-    "react-dom": "^19",
-    "@toolpad/core": "0.12.0",
-    "@mui/material": "^6",
-    "@mui/material-nextjs": "^6",
-    "@mui/icons-material": "^6",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
-    "@mui/toolpad-core": "^0.1.51",
-    "@mui/x-data-grid": "^7.24.1",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.115",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "react-redux": "^9.2.0",
-    "react-router-dom": "^7.1.4",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "@mui/icons-material": "^6",
+    "@mui/material": "^6",
+    "@mui/material-nextjs": "^6",
+    "@toolpad/core": "0.12.0",
+    "react": "^19",
+    "react-dom": "^19",
+    "react-router-dom": "^7.1.5",
+    "react-scripts": "^5.0.1"
+  },
+  "devDependencies": {
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "^15",
+    "typescript": "^4"
   },
   "scripts": {
     "start": "react-scripts start",
