--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mui/material": "^6",
     "@mui/material-nextjs": "^6",
     "@toolpad/core": "0.12.0",
+    "axios": "^1.7.9",
     "react": "^19",
     "react-dom": "^19",
     "react-router-dom": "^7.1.5",
