--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@mui/icons-material": "^6",
     "@mui/material": "^6",
     "@mui/material-nextjs": "^6",
+    "@mui/x-data-grid": "^7.25.0",
+    "@tanstack/react-query": "^5.66.0",
     "@toolpad/core": "0.12.0",
     "axios": "^1.7.9",
     "react": "^19",
