--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tanstack/react-query": "^5.66.0",
     "@toolpad/core": "0.12.0",
     "axios": "^1.7.9",
+    "jwt-decode": "^4.0.0",
     "react": "^19",
     "react-dom": "^19",
     "react-router-dom": "^7.1.5",
