--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "^19",
     "react-dom": "^19",
     "react-router-dom": "^7.1.5",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
